Radcliffe 2: Fix My Account buttons spacing issue. See #28.

--- a/radcliffe-2/woocommerce.css
+++ b/radcliffe-2/woocommerce.css
@@ -964,6 +964,13 @@ ul.products li.product .button {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen-Sans", "Ubuntu", "Cantarell", "Helvetica Neue", sans-serif;
 }
 
+.woocommerce-MyAccount-content table .button {
+	word-wrap: normal;
+	word-break: normal;
+	display: inline-block;
+	margin: .3em;
+}
+
 .woocommerce-MyAccount-content fieldset {
 	margin: 0 2px 1.5em;
 	padding: 0.5em 1.5em 1em;
